Ajustes issues SonarLint